# weather_util_rust

./: Cargo.toml  Dockerfile.build.ubuntu18.04  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: weather_benchmark.rs
scripts/: Dockerfile  bootstrap.sh  build_deb_docker.sh
src/: angle.rs  config.rs  datetime_wrapper.rs  direction.rs  distance.rs  error.rs  humidity.rs  latitude.rs  lib.rs  longitude.rs  main.rs  precipitation.rs  pressure.rs  speed.rs  temperature.rs  timestamp.rs  timezone.rs  weather_api.rs  weather_data.rs  weather_forecast.rs  weather_opts.rs
tests/: cli.rs  config.env  forecast.json  weather.json
