[package]
name = "weather_util_rust"
version = "0.16.12"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "CLI tool to pull weather data from openweathermap.org, intended to replace the debian package weather-util"
homepage = "https://github.com/ddboline/weather_util_rust"
repository = "https://github.com/ddboline/weather_util_rust"
keywords = ["WEATHER"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*.sh",
    "Dockerfile*",
    "Makefile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros"]}
derive_more = "0.99"
futures = "0.3"
dirs = "5.0"
log = "0.4"
envy = "0.4"
isocountry = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"
url = "2.3"
nutype = {version="0.4", features=["serde"]}
stack-string = {version="0.8", optional=true}
clap = {version="4.1", features=["derive"], optional=true}
reqwest = { version="0.11", features=["json", "rustls-tls", "gzip"], default-features=false, optional=true}
tokio = { version="1.34", features=["io-std", "rt", "macros", "rt-multi-thread"], optional=true}

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
criterion = "0.5"

[features]
default = ["cli", "stackstring"]
cli = ["reqwest", "tokio", "clap"]
stackstring = ["stack-string"]

[[bin]]
name = "weather-util-rust"
path = "src/main.rs"
doc = false

[[bench]]
name = "weather_benchmark"
harness = false
