[package]
name = "weather_util_rust"
version = "0.16.16"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "CLI tool to pull weather data from openweathermap.org, intended to replace the debian package weather-util"
homepage = "https://github.com/ddboline/weather_util_rust"
repository = "https://github.com/ddboline/weather_util_rust"
keywords = ["WEATHER"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*.sh",
    "Dockerfile*",
    "Makefile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1", features=["derive"], optional=true}
derive_more = "0.99"
dirs = "5.0"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
isocountry = "0.3"
log = "0.4"
nutype = {version="0.4", features=["serde"]}
once_cell = "1.0"
parking_lot = "0.12"
reqwest = { version="0.12", features=["json", "rustls-tls", "gzip"], default-features=false, optional=true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-string = {version="0.8", optional=true}
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros"]}
tokio = { version="1.37", features=["io-std", "rt", "macros", "rt-multi-thread"], optional=true}
url = "2.3"

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
assert_cmd = "2.0"
criterion = "0.5"
predicates = "3.0"
tempfile = "3.3"

[features]
default = ["cli", "stackstring"]
cli = ["reqwest", "tokio", "clap"]
stackstring = ["stack-string"]

[[bin]]
name = "weather-util-rust"
path = "src/main.rs"
doc = false

[[bench]]
name = "weather_benchmark"
harness = false
