[package]
name = "weather_util_rust"
version = "0.16.24"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
description = "CLI tool to pull weather data from openweathermap.org, intended to replace the debian package weather-util"
homepage = "https://github.com/ddboline/weather_util_rust"
repository = "https://github.com/ddboline/weather_util_rust"
keywords = ["WEATHER"]
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    "scripts/*.sh",
    "Dockerfile*",
    "Makefile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5", features=["derive"], optional=true}
derive_more = {version="2.1", features=["full"]}
dirs = "6.0"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
isocountry = "0.3"
log = "0.4"
nutype = {version="0.6", features=["serde"]}
parking_lot = "0.12"
reqwest = { version="0.13", features=["json", "gzip"], optional=true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-string = {version="1.1", optional=true}
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros"]}
tokio = { version="1.48", features=["io-std", "rt", "macros", "rt-multi-thread"], optional=true}
url = "2.5"

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
assert_cmd = "2.1"
criterion = "0.8"
predicates = "3.1"
tempfile = "3.24"

[features]
default = ["cli", "stackstring"]
cli = ["reqwest", "tokio", "clap"]
stackstring = ["stack-string"]

[[bin]]
name = "weather-util-rust"
path = "src/main.rs"
doc = false

[[bench]]
name = "weather_benchmark"
harness = false
